Test unitarios completos, faltan integración y automatización con selenium.